prod/heimdall/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      auth.istio.io/8089: NONE
      stork.libopenstorage.org/migrated: "true"
      stork.libopenstorage.org/migrationName: migrationschedule-interval-2023-01-26-185013
      stork.libopenstorage.org/migrationTime: 2023-01-26-190925
      stork.libopenstorage.org/resource-hash: "3868242803834554493"
    labels:
      acme.cert-manager.io/http-domain: "1250887531"
      acme.cert-manager.io/http-token: "1320619854"
      acme.cert-manager.io/http01-solver: "true"
    name: cm-acme-http-solver-glls7
    namespace: heimdall
  spec:
    clusterIP: 10.43.244.111
    clusterIPs:
    - 10.43.244.111
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      nodePort: 30868
      port: 8089
    selector:
      acme.cert-manager.io/http-domain: "1250887531"
      acme.cert-manager.io/http-token: "1320619854"
      acme.cert-manager.io/http01-solver: "true"
    type: NodePort
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      stork.libopenstorage.org/migrated: "true"
      stork.libopenstorage.org/migrationName: migrationschedule-interval-2023-01-26-185013
      stork.libopenstorage.org/migrationTime: 2023-01-26-190936
      stork.libopenstorage.org/resource-hash: "3757209548898947264"
    name: heimdall-service
    namespace: heimdall
  spec:
    clusterIP: 10.43.226.213
    clusterIPs:
    - 10.43.226.213
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-80
      port: 80
    - name: https-443
      port: 443
    selector:
      app: heimdall
kind: List
metadata:
  resourceVersion: ""
